Increase JVM heap sizes and improve UI styles in auth pages
Increased heap sizes for Kotlin daemon and Gradle to support larger builds. Improved UI in Login and Register pages, including consistent color usage, better text styling, and input field enhancements for a more polished user experience. Added Material Icons Extended library for additional UI capabilities.

--- a/CodeCareer/gradle.properties
+++ b/CodeCareer/gradle.properties
@@ -1,6 +1,8 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx2048M
+# Increase Kotlin daemon heap for WASM compilation
+kotlin.daemon.jvmargs=-Xmx4096M -XX:+HeapDumpOnOutOfMemoryError -XX:-UseGCOverheadLimit
 
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+# Increase Gradle JVM heap
+org.gradle.jvmargs=-Xmx4096M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
